--- a/4-1/index.html
+++ b/4-1/index.html
@@ -4,14 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>sample</title>
 </head>
 <body>
     <div id="app">
-        <button @click="increment">+1</button>
-        <button @click="decrement">-1</button>
+        <button class="button" @click="increment">+1</button>
+        <button class="button" @click="decrement">-1</button>
         <br>
         <p>{{ count }}</p>
+        <p v-if="count>=80" class="passed">ランクA</p>
+        <p v-else-if="count>=60">ランクB</p>
+        <p v-else>ランクC</p>
+        <!-- <div v-if="isPass">
+            <p class="passed">合格です！</p>
+            <section>
+                <h2>おめでとうございます</h2>
+                <p>これからもがんばりましょう</p>
+            </section>
+        </div>
+        <div v-else><p>不合格</p></div> -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./script/script.js"></script>
